# teleg

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
env/: pyvenv.cfg
src/: bot.py  jdfg  keyboards.py  settings.py
