[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Aiden <155806565+Aiden-The-Dev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
